[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Stamina.gd" type="Script" id=1]

[node name="Stamina" type="Node"]
script = ExtResource( 1 )

[node name="StaminaTimer" type="Timer" parent="."]
one_shot = true

[node name="StaminaExhaustedTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StaminaTimer" to="." method="_on_StaminaTimer_timeout"]
[connection signal="timeout" from="StaminaExhaustedTimer" to="." method="_on_StaminaExhaustedTimer_timeout"]
